spacing bug

--- a/css/style.css
+++ b/css/style.css
@@ -344,7 +344,7 @@ p {
     flex-direction: row;
     justify-content: flex-start;
     gap: 1.5rem;
-    margin-top: 2rem;
+    margin-top: 3rem;
 }
 
 
